tests/bad/Foo.php
<?php

/*
 * To change this template, choose Tools | Templates
 * and open the template in the editor.
 */

/**
 * Description of Foo
 *
 * @author void
 */
class Foo {
    //put your code here
    public static function foo_bar($bar,$foo) {
        
    }
}